syntax = "proto3";

option csharp_namespace = "Catalog";

package catalog;

import "google/protobuf/empty.proto";

service Subject {
  rpc GetSubject (SubjectRequest) returns (GetSubjectReponse);
}

message SubjectRequest {
  string id = 1;
}

message SubjectReply {
  string id = 1;
  string name = 2;
}

message GetSubjectReponse {
  oneof response {
    SubjectReply subject = 1;
    google.protobuf.Empty empty = 2;
  }
}